react/src/styles/App.module.scss
/* ... */
.subtitle {
    font-size: 13px;
    line-height: 14px;
    text-align: center;

    .section-content--course-detail & {
        margin-bottom: 10px;
    }

    .section-content--lecture-detail & {
        margin-bottom: 4px;
    }
}


.small-title {
    font-weight: bold;
    font-size: 13px;
    line-height: 14px;

    .section-content--lecture-detail & {
        display: inline-block;
        width: 100%;
        padding-bottom: 6px;
        cursor: pointer;

        & > span {
            margin-right: 6px;
        }
    }
}


.text-button {
    cursor: pointer;

    &,
    &:link {
        color: #E54C65;
    }

    &:hover {
        color: #963246;
    }


    &--black {
        color: #555555;


        &:hover {
            color: #000000;
        }
    }


    &--right {
        float: right;
    }

    &--disabled {
        pointer-events: none;
        color: #CCCCCC;
    }

    &--review-block {
        float: right;
        margin-left: 8px;
    }


    &--review-write-block {
        margin-top: 4px;
    }

    .section-content--lecture-detail & {
        font-size: 12px;
        line-height: 13px;

        &:not(:first-child) {
            margin-left: 6px;
        }
    }

    .search-area .buttons & {
        margin-left: 6px;
    }
}


.main-date {
    font-size: 18px;
    line-height: 19px;
    margin: 4px 0 10px 0;
    text-align: center;
    color: rgba(#E54C65, 0.3);
}


.academic-schedule {
    & > div:nth-child(1) {
        font-size: 20px;
        line-height: 20px;
        margin-bottom: 6px;
        text-align: center;
    }

    & > div:nth-child(2) {
        margin-bottom: 10px;
        text-align: center;


        strong {
            margin-right: 8px;
        }
    }
}


.related-courses {
    display: flex;
    flex-direction: row;

    & > div:nth-child(1),
    & > div:nth-child(3),
    & > div:nth-child(5) {
        flex: 1 1 auto;
        width: 100%;
        display: flex;
        flex-direction: column;
    }

    & > div:nth-child(2),
    & > div:nth-child(4) {
        flex: 0 0 auto;
        margin: auto 10px;
    }
}


.history {
    overflow: scroll;

    & > table {
        table-layout: auto;
        margin-right: -10000px;

        & > tr {
            &:first-child {
                vertical-align: bottom;
            }
            &:nth-child(2) {
                font-weight: bold;
                font-size: 11px;
                line-height: 12px;
            }
            &:last-child {
                vertical-align: top;
            }

            & > th {
                width: 21px + 12px;
                padding-right: 10px;
                font-size: 12px;
                vertical-align: middle;
                text-align: right;
                line-height: 13px;
                color: #333333;
                font-weight: initial;;
            }

            & > td {
                text-align: center;
                padding: 0 6px;
                width: calc(64px + 7vh + (6px * 2));
                border-left: 1px solid #E8E8E8;
                &:first-of-type {
                    padding-left: 0;
                    width: calc(64px + 7vh + 6px);
                    border-left: none;
                }
                &.history__cell--year-label {
                    padding-top: 6px;
                    padding-bottom: 6px;
                }
                &.history__cell--unopen {
                    vertical-align: middle;
                    color: #AAAAAA;
                    padding-top: 8px;
                    padding-bottom: 8px;
                }
            }
        }
    }
}


.attributes {
    & > div {
        display: flex;
        flex-direction: row;
        margin-bottom: 8px;

        .block--course & {
            margin-bottom: 6px;
        }

        &:last-child {
            margin-bottom: 0;
        }

        & > div:first-child,
        & > span:first-child,
        & > *:first-child {
            font-weight: bold;
            margin-right: 6px;
            flex: none;

            &.fixed-ko {
                width: 23px;
            }
            &.fiexed-en {
                width: 32px;
            }
        }

        & > *:last-child {
            flex: initial;

            .search-area & {
                margin-bottom: -6px;

                & > label {
                    margin-bottom: 6px;
                    margin-right: 6px;
                    white-space: nowrap;
                }
            }
        }
    }
}
/* ... */

